# YDM

./: Cargo.toml
.github/workflows/: build.yml
extension/: ydm_extension.crx
src/: api.rs  app.rs  browser.rs  config.rs  downloader.rs  main.rs  queue.rs  types.rs  ytdlp.rs
