[package]
name        = "ydm"
version     = "1.0.0"
edition     = "2021"
authors     = ["YDM"]
description = "YDM – Download Manager"

[[bin]]
name = "ydm"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio        = { version = "1",  features = ["full"] }

# HTTP client
reqwest      = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }

# GUI
eframe       = { version = "0.27", features = ["default_fonts"] }
egui         = "0.27"
egui_extras  = "0.27"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Utilities
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs         = "5"
open         = "5"
url          = "2"
mime_guess   = "2"
humansize    = "2"
futures      = "0.3"
tokio-util   = { version = "0.7", features = ["io"] }
bytes        = "1"
rfd          = "0.14"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winreg       = "0.52"
winapi       = { version = "0.3", features = [
    "winuser", "shellapi", "windef", "wincon",
    "processenv", "winbase", "fileapi"
] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
opt-level = 1
